ISPN-9797 Ensure the server starts with the correct JDK modules if necessary